# ed_gui_server

./: CMakeLists.txt  package.xml
msg/: circleProperties.msg  objPosVel.msg  rectangleProperties.msg
src/: gui_server_plugin.cpp  gui_server_plugin.h  robot.cpp
